# mistfit

./: LICENSE  MANIFEST.in  README.md  minimint_fit.py  pyproject.toml  run_nest.py  setup.cfg  setup.py
.github/workflows/: workflow.yml
example/: example_table.fits
src/mistfit/: core.py
