[metadata]
name = mist-stellar-fitter
description = Fit MIST models using MiniMINT with dynesty nested sampling (photometry + spectroscopic constraints).
long_description = file: README.md
long_description_content_type = text/markdown
author = Manuel Cavieres
url = https://github.com/mncavieres/mistfit
project_urls =
    Issues = https://github.com/mncavieres/mistfit/issues
keywords = MIST, stellar, astrophysics, dynesty, minimint, isochrones
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy

license = MIT

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.setuptools]
license-files = []


[options]
python_requires = >=3.9
packages = find:
package_dir =
    = src
install_requires =
    numpy>=1.23
    scipy>=1.10
    astropy>=5
    dynesty>=2.1
    minimint>=0.5
    matplotlib>=3.6
    tqdm>=4.64
    corner>=2.2
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    mist-fit = mist_stellar_fitter.cli:main

[options.extras_require]
dev =
    pytest
    pytest-cov
    ruff
    mypy
    build
    twine
plot =
    corner>=2.2
